edited bower file

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
-  "name": "flex-layout",
+  "name": "simple-flex-layout",
   "description": "simple flexible box layout wrapper",
+  "main": "dist/flex-layout.min.css"
   "authors": [
     "Thomas Klepzig"
   ],
